# api/server/router/monitor_router.go
@@ -3,16 +3,17 @@ package router
 import (
 	"go-backend/api/common/middleware"
 	"go-backend/api/sys/iot/monitor"
+
 	"github.com/gin-gonic/gin"
 )
 
 func MonitorRouter(r *gin.Engine) *gin.Engine {
-	monitorCentor := r.Group("/monitorCentor")
-	monitorCentor.Use(middleware.AuthMiddleware())
-	
-	monitorCentor.GET("/connect", monitor.ConnectToMonitorCentor)
+	monitorCenter := r.Group("/monitorCenter")
+	monitorCenter.Use(middleware.AuthMiddleware())
 
-	monitorCentor.DELETE("/disconnect", monitor.DisconnectMonitorCentor)
+	monitorCenter.GET("/connect", monitor.ConnectToMonitorCenter)
+
+	monitorCenter.DELETE("/disconnect", monitor.DisconnectMonitorCenter)
 
 	return r
 }
