# docs/swagger.json
@@ -269,6 +269,13 @@
                         "name": "BiologyTypeId",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1325,6 +1332,13 @@
                         "name": "FixedDeviceTypeId",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1742,6 +1756,13 @@
                         "name": "PortableDeviceTypeId",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2035,14 +2056,14 @@
                 }
             }
         },
-        "/monitorCentor/connect": {
+        "/monitorCenter/connect": {
             "get": {
-                "description": "connect with monitor centor : 连接到监控中心以接受推送 参数列表：[] 访问携带token",
+                "description": "connect with monitor center : 连接到监控中心以接受推送 参数列表：[] 访问携带token",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "MonitorCentor"
+                    "MonitorCenter"
                 ],
                 "summary": "API of golang gin backend",
                 "parameters": [
@@ -2064,14 +2085,14 @@
                 }
             }
         },
-        "/monitorCentor/disconnect": {
+        "/monitorCenter/disconnect": {
             "delete": {
-                "description": "disconnect with monitor centor : 从监控中心断开连接 参数列表：[] 访问携带token",
+                "description": "disconnect with monitor center : 从监控中心断开连接 参数列表：[] 访问携带token",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "MonitorCentor"
+                    "MonitorCenter"
                 ],
                 "summary": "API of golang gin backend",
                 "parameters": [
@@ -2352,7 +2373,7 @@
                         "type": "integer",
                         "description": "rule id",
                         "name": "RuleId",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -2388,7 +2409,7 @@
                         "type": "integer",
                         "description": "company id",
                         "name": "CompanyId",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -2453,21 +2474,21 @@
                         "type": "integer",
                         "description": "rule id",
                         "name": "RuleId",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "exec internal",
                         "name": "ExecInternal",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "future start time",
                         "name": "FutureTime",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -2503,14 +2524,14 @@
                         "type": "integer",
                         "description": "rule id",
                         "name": "RuleId",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "exec internal",
                         "name": "ExecInternal",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
